	- add "translate" and "translateHtml" methods to D-Bus interface
	- change license from GPLv3 to GPLv2
* Version 0.08
	- add czech translation
	- fix bug with multiple running from different users
	- add brazilian portuguese translation
	- update the traditional chinese translation
	- add support for configurable instant search
	- add support for separate translations
* Version 0.09
	- add polish translation
	- fix bug with instant search
	- add italian translation
	- fix bug with simlinks to dictionaries
	- add german translation
	- improve popup window
	- update the german translation
	- reorganize project
	- add basic Windows support
	- add plugins support
	- add toolbar to dictionary widget
	- add for links in translations (by pressing Ctrl and clicking on the word)
	- improve instant search
	- improve popup window
	- add support for closing popup by double click on toolbar
* Version 0.10
	- change tray icon if scanning disabled
	- add font editor
	- some improves and bugfixes
* Version 0.11
	- fix bug with bad source word
	- fix bug with removed last letter in translation
* Version 0.12
	- update italian translation
	- add support for popup window moving
* Version 0.12.1
	- fix critical bug with popup window
* Version 0.12.2
	- fix bug with building on Ubuntu Hardy
* Version 0.12.3
	- update simplified chinese translation
* Version 0.12.4
	- update polish translation
* Version 0.12.5
	- fix bug with main window title
* Version 0.12.6
	- update german translation
* Version 0.12.7
	- fix bug with empty speech cmd
* Version 0.12.8
	- add localization for standard Qt dialogs
	- add support for Escape key in main window
	- update ukrainian translation
	- update chinese translation
	- fix bug with speaker
	- remove alphabetical sorting of results
	- improve saving
	- add a tooltip for the tray icon
* Version 0.12.9
	- update german translation
	- fix typo in the COPYING filename
* Version 0.13.0
	- add french translation
	- improve Windows port
	- add SWAC plugin