@@ -105,3 +105,4 @@
 	- add french translation
 	- improve Windows port
 	- add SWAC plugin
+	- add command line support
